--- a/.github/workflows/issues-bot.yml
+++ b/.github/workflows/issues-bot.yml
@@ -9,13 +9,11 @@ jobs:
   comment-with-action:
     runs-on: ubuntu-latest
     steps:
-      - name: "dump github context"
-        run: echo '${{ toJSON(github.event) }}' | jq
-        shell: bash
-      - name: Create comment
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            Issued opened
-          reactions: '+1'
+        - name: Create comment
+          uses: peter-evans/create-or-update-comment@v3
+          with:
+
+            issue-number: 1
+            body: |
+             issued by: ${{ github.actor }}
+            reactions: '+1'
