--- a/.github/workflows/issues-bot.yml
+++ b/.github/workflows/issues-bot.yml
@@ -14,7 +14,7 @@ jobs:
           gh api -X POST \
             https://api.github.com/repos/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
             -f body='
-            Comment but from the API call not action
+            Comment but from the API
             '
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
