--- a/.github/workflows/issues-bot.yml
+++ b/.github/workflows/issues-bot.yml
@@ -6,18 +6,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  comment:
+  comment-with-action:
     runs-on: ubuntu-latest
     steps:
-      - name: Create comment with API
-        run: |
-          gh api -X POST \
-            https://api.github.com/repos/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
-            -f body='
-            Comment but from the API
-            '
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          ORGANIZATION: ${{ github.event.repository.owner.login }} #JSON structure changed
-          REPOSITORY: ${{ github.event.repository.name }}
-          ISSUE_NUMBER: ${{ github.event.issue.number }}
+        - name: Create comment
+          uses: peter-evans/create-or-update-comment@v3
+          with:
+
+            issue-number: ${{ github.event.issue.number }}
+            body: |
+             issued by: ${{ github.actor }}
+            reactions: '+1'
