--- a/.github/workflows/issues-bot.yml
+++ b/.github/workflows/issues-bot.yml
@@ -17,3 +17,18 @@ jobs:
             body: |
              issued by: ${{ github.actor }}
             reactions: '+1'
+  comment:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create comment with API
+        run: |
+          gh api -X POST \
+          https://api.github.com/repos/${ORGANIZATION}/${REPOSITORY}/issues/${ISSUE_NUMBER}/comments \
+          -f body='
+          Comment but from the API
+          '
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORGANIZATION: ${{ github.event.organization.login }}
+          REPOSITORY: ${{ github.event.repository.name }}
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
