--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,18 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        # cacahe node_modules to speed up build
 
-      - name: Build application
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Build
         run: npm run build
 
-      - name: Run tests
+      - name: Test
         run: npm run test
