--- a/.github/workflows/dafaults.yml
+++ b/.github/workflows/dafaults.yml
@@ -13,5 +13,9 @@ jobs:
         shell: bash
         working-directory: src
     steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+
         - name: print App.css
-          run: cat App.css
+          run: |
+            cat App.css
