--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,12 +1,11 @@
-name: Build and Test
-
+name: build react app image and push to docker hub and pull from aws ec2
 on:
   push:
     branches:
       - main
   workflow_dispatch:
 
-jobs:  
+jobs:
   build:
     runs-on: ubuntu-latest
 
@@ -33,5 +32,13 @@ jobs:
       - name: Build application
         run: npm run build
 
-      - name: Run tests
-        run: npm run test
+      - name: Build and push Docker image
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          docker build -t $DOCKERHUB_USERNAME/react-app-action:latest .
+          docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+          docker push $DOCKERHUB_USERNAME/react-app
+
+      
