--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -37,7 +37,7 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker build -t $DOCKERHUB_USERNAME/react-app-action:latest .
+          docker build -t $DOCKERHUB_USERNAME/react-app-action:latest -f push.Dockerfile .
           docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
           docker push $DOCKERHUB_USERNAME/react-app
 
