add CI/CD to AWS EC@

--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -43,6 +43,6 @@ jobs:
         run: |
           docker build -t $DOCKERHUB_USERNAME/react-app-action:latest -f push.Dockerfile .
           docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
-          docker push $DOCKERHUB_USERNAME/react-app
+          docker push $DOCKERHUB_USERNAME/react-app-action:latest
 
       
