add CI/CD to AWS EC@

--- a/.github/workflows/share.yml
+++ b/.github/workflows/share.yml
@@ -1,9 +1,9 @@
 name: share log file to other job
 
 on:
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
   workflow_dispatch:
 
 jobs:
