--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -54,7 +54,5 @@ jobs:
           script: |
             ls -la
             pwd
-
-        # q : what is host, username, key, port? where can i get these?
-        # a : host is ec2 public ip, username is ec2 username, key is ec2 key, port is ec2 port
+            sudo docker pull $DOCKERHUB_USERNAME/react-app-action:latest
         
