add CI/CD to AWS EC2

--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -54,5 +54,5 @@ jobs:
           script: |
             ls -la
             pwd
-            sudo docker pull $DOCKERHUB_USERNAME/react-app-action:latest
+            sudo docker pull ishtiaqsamdani/react-app-action:latest
         
