--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -36,6 +36,10 @@ jobs:
         run: | 
           ls -la
           pwd 
+
+      - name: run tests
+        run: npm run test
+        
       - name: Build and push Docker image
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
