--- a/.github/workflows/docker-push-aws.yml
+++ b/.github/workflows/docker-push-aws.yml
@@ -40,9 +40,9 @@ jobs:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker build -t ishtiaqsamdani/react-app-action:latest .
+          docker build -t $DOCKERHUB_USERNAME/react-app-action:latest -f push.Dockerfile .
           docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
-          docker push ishtiaqsamdani/react-app-action:latest
+          docker push $DOCKERHUB_USERNAME/react-app-action:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
@@ -51,8 +51,12 @@ jobs:
           username: ${{ secrets.AWS_USER }}
           key: ${{ secrets.AWS_PRIVATE_KEY }}
           script: |
-            docker stop react-app || true
-            docker rm react-app || true
+            docker stop react-app-action || true
+            docker rm react-app-action || true
             docker rmi ishtiaqsamdani/react-app-action:latest || true
             docker pull ishtiaqsamdani/react-app-action:latest
-            docker run -d --name react-app -p 80:80 ishtiaqsamdani/react-app-action:latest
+            docker run -d --name react-app-action -p 81:80 ishtiaqsamdani/react-app-action:latest
+
+
+            
+        
